--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t docker-react-udemy -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true docker-react-udemy npm run test -- --coverage
+  - docker run -e CI=true docker-react-udemy npm run test 
     
 deploy: 
   provider: elastickbeanstalk
@@ -22,4 +22,4 @@ deploy:
       
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: 
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
